# PROJET-5.1_IMAGE_DELVIGNE_SCHMITT

./: .gitignore  README.md  TrailerColorShift.url
Code/: CMakeCache.txt  CMakeLists.txt  Color  Makefile  Test  Test.cpp  cmake_install.cmake  image_ppm.h
Code/Images/: City.ppm  Leaf.ppm  Sources.txt  tmp.ppm
Code/ImagesOut/: CityAnalogous200_20  CityAnalogous300_10  CityAnalogous300_20  CityAnalogous50_10  CityAnalogousSmooth50_10  CityComplementary_300  CityMonochrome300  CityRed.ppm  CityRedGreen.ppm  CityTriadic300  City_ClosestMapper_Triadic.ppm  City_HistogramMapper.ppm  City_HistogramMapper_Triadic.ppm  ImageWithSaturations.ppm  LeafGreenBlue.ppm  LeafRedGreen.ppm  LeafRedPurple.ppm  Leaf_300.ppm  Leaf_Green_Purple.ppm  Nom_de_l'image.ppm  save.ppm  test.ppm  tmp.ppm
Code/ImagesOut/ColorMapper_Offset/: City_ColorMapper_Complementary_60_10  City_ColorMapper_Complementary_60_100  City_ColorMapper_Complementary_60_120  City_ColorMapper_Complementary_60_150  City_ColorMapper_Complementary_60_50
Code/ImagesOut/Wrong lightness/: CityAnalogous100_10  CityAnalogous100_20  (+2 more)
Code/src/: Color.cpp  Color.h  ColorImage.cpp  ColorImage.h  ColorMapper.cpp  ColorMapper.h  ColorMapperSelection.cpp  ColorMapperSelection.h  ColorScheme.cpp  ColorScheme.h  ColorSchemeConverter.cpp  ColorSchemeConverter.h  ColorSelector.cpp  ColorSelector.h  HueSmother.cpp  HueSmother.h  Image_ppm.cpp  MainPalette.cpp  MainPalette.h  PaletteSelection.cpp  PaletteSelection.h  PlusAndMinusButtons.cpp  PlusAndMinusButtons.h  Test.cpp  image_ppm.h  main.cpp  resize_image.sh  toppm.sh
(+1 files in other folders)
